# MothDrinks

./: Aggregation.ipynb  MassTable.ods  MeniscusTorch.py  MeniscusTracking2.Rmd  MeniscusTracking2.nb.html  MothProjectML.ipynb  README.md  TestMeniscusFinder.ipynb  TestProboscisTracking.ipynb  TrainMeniscusFinder.ipynb  TrainProboscisFinder.ipynb  aggregate_figures.py  aggregate_figures.py.lprof  align.c  align.py  align2.py  all_meniscus.py  baby_steps.py  background.py  big_trainset.py  build.sh  build_debug.sh  build_frameset.py  build_proboscis_train.py  build_testset.py  build_trainingset.py  check_poss.py  cine.py  cine_profiler.py  cine_profiler2.py  code-profile.profile  correlate_variables.py  correlate_variables2.py  create_combined_iou_hist.py  examine_relationship.py  figure_helper.py  find_flaw_origins.py  for_profiling.py  generate_data_for_training.py  graph_meniscus_from_json.py  (+53 more)
cine_median/: Cargo.toml
meniscus_utils/: annotations_big.xml  data_loading.py  evaluate_meniscus_tracker.py  model_arch.py  proboscis_and_meniscus_trainInP.xml  train_meniscus_tracker.py
model_attempt1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model_attempt2/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model_attempt3/: fingerprint.pb  saved_model.pb
overtrained_1/: saved_model.pb
proboscis_model_b1/: saved_model.pb
proboscis_utils/: TestOptimizeProboscisFinder.ipynb  data_augment.py  model_arch.py  old_data_loading.py  test_proboscis_model.py  (+2 more)
sift2/: Cargo.toml
sift2/src/: histogram.rs  image.rs  keypoint.rs  lib.rs  quadtree.rs  scale_space.rs
(+12 files in other folders)
