[package]
name = "sift2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
nalgebra = "0.31.2"
convolve2d = "0.1.0"
ordered-float = "3.2.0"
binary-heap-plus = "0.5.0"
rand = "0.8.5"
rayon = "1.5.3"